--- a/dragonstack/frontend/src/index.html
+++ b/dragonstack/frontend/src/index.html
@@ -9,8 +9,7 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
-
-<div id="root"></div>
+<div id='root'></div>
 <script type="module" src="./index.js"></script>
 </body>
 </html>
